fixed bug of dbl clicks and z-index transparency

--- a/src/modules/shapeGenerator/shapes.css
+++ b/src/modules/shapeGenerator/shapes.css
@@ -6,20 +6,11 @@ body {
 }
 .container-block {
     height: 100vh;
-    background: red;
+    background: transparent;
     overflow: hidden;
     position: relative;
 }
-.container-block.blue {
-    background: #feb47b;
-    background: -moz-linear-gradient(top,#feb47b 0%,#ff7e5f 100%);
-    background: -webkit-linear-gradient(top,#feb47b 0%,#ff7e5f 100%);
-    background: linear-gradient(to bottom, #7bfed0 0%, #dcff5f 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#feb47b',endColorstr='#ff7e5f',GradientType=0);
-}
-.container-block.white {
-    background: #ec7d7d;
-}
+
 .container-block .boxWrapper {
     position: absolute;
     width: 50px;
